# shelter

./: .env.example  .gitignore  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
animals_public/: admin.py  apps.py  models.py
animals_public/fixtures/: cat-breeds.json  dog-breeds.json
animals_public/migrations/: 0001_initial.py
cms/: admin.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
cms/migrations/: 0001_initial.py  0002_page_slug.py  0003_page_icon.py  0004_alter_page_slug.py  0005_alter_page_title.py  0006_alter_page_layout.py
cms_public/: admin.py  apps.py  models.py
cms_public/migrations/: 0001_initial.py  0002_alter_section_unique_together.py
main/: admin.py  forms.py  middlewares.py  mixins.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/: home.html  sign_up.html
seed/: cat-breeds.json  dog-breeds.json
settings/: admin.py  middlewares.py  models.py
settings/migrations/: 0001_initial.py  0002_siteconfiguration_hero.py  0003_alter_siteconfiguration_logo_and_more.py  0004_alter_siteconfiguration_hero_and_more.py  0005_alter_siteconfiguration_logo.py  0006_siteconfiguration_base_layout.py  0007_alter_siteconfiguration_base_layout.py  0008_alter_siteconfiguration_hero_and_more.py
shelterProject/: asgi.py  context_processors.py  settings.py  urls.py  urls_public.py  wsgi.py
static/css/: styles.css  styles.scss
templates/: base.html  base_public.html  base_tenant.html
templates/admin/: base_site.html
tenant/: admin.py  choices.py  models.py  urls.py  views.py
(+28 files in other folders)
