[tool.poetry]
name = "shelterproject"
version = "0.1.0"
description = ""
authors = ["Moritz Wach"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
cloudinary = "^1.40.0"
django-debug-toolbar = "^4.4.2"
django-environ = "^0.11.2"
django-htmx = "^1.18.0"
django-redis = "^5.4.0"
django-tailwind = "^3.8.0"
django-tenants = "^3.6.1"
django-widget-tweaks = "^1.5.0"
django-solo = "^2.2.0"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.13.0"

